--- a/.config
+++ b/.config
@@ -2,6 +2,6 @@
 # Automatically generated file; DO NOT EDIT.
 # Configuration
 #
-CONFIG_USER_APP1_SELECT=y
+# CONFIG_USER_APP1_SELECT is not set
 CONFIG_USER_APP2_SELECT=y
 CONFIG_USER_APP3_SELECT=y
