--- a/scripts/Makefile.clean
+++ b/scripts/Makefile.clean
@@ -13,6 +13,13 @@ include scripts/Kbuild.include
 kbuild-dir := $(if $(filter /%,$(src)),$(src),$(srctree)/$(src))
 include $(if $(wildcard $(kbuild-dir)/Kbuild), $(kbuild-dir)/Kbuild, $(kbuild-dir)/Makefile)
 
+# Files we need to clean
+
+__obj-files := $(filter %.o, $(obj-y))
+obj-files   := $(__obj-files)
+obj-files	+= $(patsubst %.o,.%.o.cmd, $(__obj-files))
+obj-files	+= built-in.o .built-in.o.cmd
+
 # Figure out what we need to build from the various variables
 # ==========================================================================
 
@@ -40,7 +47,8 @@ __clean-files	:= $(extra-y) $(extra-m) $(extra-)       \
 		   $(host-progs)                         \
 		   $(hostprogs-y) $(hostprogs-m) $(hostprogs-) \
 		   $(hostlibs-y) $(hostlibs-m) $(hostlibs-) \
-		   $(hostcxxlibs-y) $(hostcxxlibs-m)
+		   $(hostcxxlibs-y) $(hostcxxlibs-m)	\
+		   $(obj-files)
 
 __clean-files   := $(filter-out $(no-clean-files), $(__clean-files))
 
